--- a/js.intro/js-intro.html
+++ b/js.intro/js-intro.html
@@ -12,6 +12,14 @@
   <article id="content">Add content here</article>
 
   <!-- scripts -->
+
+  <div id="bmi">
+
+  </div>
+
+  <div id="billeder">
+
+  </div>
   <script src="js/js.js"></script>
 </body>
 </html>
